<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.deveferaz.ilerna.appsenderos.ui.home.SenderoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_senderos" />

    <fragment
        android:id="@+id/nav_favs"
        android:name="es.deveferaz.ilerna.appsenderos.ui.home.FavsFragment"
        android:label="@string/menu_favs"
        tools:layout="@layout/fragment_senderos" />

    <fragment
        android:id="@+id/nav_completados"
        android:name="es.deveferaz.ilerna.appsenderos.ui.home.CompletadoFragment"
        android:label="@string/menu_completados"
        tools:layout="@layout/fragment_senderos" />
</navigation>