<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addSendero.AddSenderoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/descripcion"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/til_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ubicacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/til_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/ubicacion"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_imagen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/imagen"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/til_ubicacion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_imagen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_distancia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/distancia"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/til_imagen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_distancia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_select_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/shape_image_view_border"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/add_place_select_current_location_padding"
                android:text="@string/add_place_select_current_location_text"
                android:textColor="@color/md_theme_light_onPrimaryContainer"
                android:textSize="@dimen/add_place_select_current_location_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_distancia" />

            <LinearLayout
                android:id="@+id/ll_municipio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_current_location">

                <Spinner
                    android:id="@+id/spinner_municipio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_municipio"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="12dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:paddingStart="9dp"
                    android:paddingEnd="0dp"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/baseline_add_24"
                    app:iconPadding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ll_chip"
                android:padding="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/ll_municipio"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_alta"
                    android:text="@string/dificil"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_media"
                    android:text="@string/media"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_baja"
                    android:text="@string/fail" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_default"
                android:text="@string/guardar"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintTop_toBottomOf="@id/ll_chip" />
            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_default"
                android:text="@string/eliminar"
                android:backgroundTint="@color/md_theme_dark_errorContainer"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/ll_chip" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>